colour changes on website

--- a/public/templates/career.html
+++ b/public/templates/career.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>pricing</title>
+<title>faq</title>
 
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,800,800italic" rel="stylesheet">
 <link href="http://fonts.googleapis.com/css?family=Oswald:400,300,700" rel="stylesheet">
@@ -59,135 +59,128 @@
 <!--end header-->
 
   <div class="why-choose360notion-bg">
-  <div >
-        <div class="container masthead-text-title">
-            <h1 class="masthead-subtitle text-center ">
-                <b class="masthead-title-big">pricing</b>
-            </h1>
+ 
+        <div class="container">
+            <h1 class="masthead-subtitle">Careers</h1>
         </div>
     </div>
-	
-    <div class="content">
-        <div class="container">
-            <div class="text-center">
-                <h2>Start your 14-day free trial today!</h2>
-                <h4>No sign-up fees. No credit card required. No long-term commitments.</h4>
 
-                <br><br><br><br>
-            </div>
+  
+        <div class="container bg-corlor">
+            <div class="layout layout-stack-sm layout-main-left">
+                <div class="col-sm-8 layout-main">
+                    <h4 class="content-title">
+                        <span>You and {siteName} — a perfect match</span>
+                    </h4>
 
-            <div class="row">
-                <div class="col-sm-12 col-md-10 col-md-offset-1">
-                    <div class="row">
-                        <div class="col-sm-4">
-                            <div class="pricing-plan">
-                                <div class="pricing-header">
-                                    <h3 class="pricing-plan-title">Starter</h3>
-                                    <p class="pricing-plan-label">For Startups</p>
+                    <p>
+                        We’re just getting started and are always on the lookout for talented people who want to grow with us as we expand 
+                        into new markets. If you want to contribute, please <a href="mailto:careers@myabuy.com">contact us</a>. 
+                    </p>
+
+                    <p>
+                        We are looking for talented people to fill the following roles: 
+                    </p>
+
+                    <div id="accordion-help" class="panel-group accordion-simple">
+                        <div class="panel">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion-help" href="#job-1">
+                                        <i class="fa accordion-caret"></i>
+                                        <i class="fa faq-accordion-caret"></i>
+                                        Full-Stack Developer
+                                    </a>
+                                </h4>
+                            </div>
+
+                            <div id="job-1" class="panel-collapse collapse">
+                                <div class="panel-body">
+                                    <p>
+                                        Responsible for maintaining and developing new features for the site using 
+                                        common NodeJS tools such as: 
+                                    </p>
+                                    <ul>
+                                        <li>Express</li>
+                                        <li>MongoDB</li>
+                                        <li>PassportJS</li>
+                                    </ul>
+                                    <p>
+                                        The ideal candidate must be proficient in front-end development using HTML5, CSS, and jQuery. 
+                                    </p>
                                 </div>
-
-                                <div class="pricing-plan-price">
-                                    <span class="pricing-plan-amount">$0</span> mo. / member
-                                </div>
-
-                                <ul class="pricing-plan-details">
-                                    <li><strong>3</strong> Members max.</li>
-                                    <li><strong>15 MB</strong> Storage Limit</li>
-                                </ul>
-                                <a href="/signup" class="btn btn-primary">Choose Plan</a>
                             </div>
                         </div>
 
-
-                        <div class="col-sm-4">
-                            <div class="pricing-plan">
-                                <div class="pricing-plan-ribbon-secondary ui-tooltip" title="" data-original-title="Best Value!">
-                                    <i class="fa fa-star"></i>
-                                </div>
-
-                                <div class="pricing-header">
-                                    <h3 class="pricing-plan-title">Mega</h3>
-                                    <p class="pricing-plan-label">For small/medium size companies</p>
-                                </div>
-
-                                <div class="pricing-plan-price">
-                                    <span class="pricing-plan-amount">$30</span> mo. / member
-                                </div>
-
-                                <ul class="pricing-plan-details">
-                                    <li><strong>3 to 50</strong> Members</li>
-                                    <li><strong>Unlimited Storage</strong>  </li>
-                                </ul>
-
-                                <a href="/signup" class="btn btn-primary">Choose Plan</a>
+                        <div class="panel">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion-help" href="#job-2">
+                                        <i class="fa accordion-caret"></i>
+                                        <i class="fa faq-accordion-caret"></i>
+                                        Growth Hacker
+                                    </a>
+                                </h4>
                             </div>
-                        </div>
 
-                        <div class="col-sm-4">
-                            <div class="pricing-plan">
-                                <div class="pricing-header">
-                                    <h3 class="pricing-plan-title">Premium</h3>
-                                    <p class="pricing-plan-label">For large companies</p>
+                            <div id="job-2" class="panel-collapse collapse">
+                                <div class="panel-body">
+                                    <p>
+                                        Responsible for expanding the userbase of {siteName} using a wide-variety of techniques including but not limited to: 
+                                        <ul>
+                                            <li>Data Mining</li>
+                                            <li>A/B Testing</li>
+                                            <li>Social Media Tactics</li>
+                                            <li>Search Engine Optimization</li>
+                                        </ul>
+                                    </p>
                                 </div>
-
-                                <div class="pricing-plan-price">
-                                    <span class="pricing-plan-amount">$25</span> mo. / member
-                                </div>
-
-                                <ul class="pricing-plan-details">
-                                    <li><strong>51</strong> Members or more</li>
-                                    <li><strong>Unlimited Storage</strong>  </li>
-                                </ul>
-
-                                <a href="/signup" class="btn btn-primary">Choose Plan</a>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <br><br><br><br>
+                <div class="col-sm-4 layout-sidebar">
+                    <h4 class="content-title">
+                        <span>Office Location</span>
+                    </h4>
 
-            <div class="row text-center">
-                <div class="col-md-12">
-                    <h3 class="content-title title-size text-center" >
-                        <span>The Starter, Mega and Premium Plans All Come With</span>
-                    </h3>
-                </div>
-            
-                <div class="col-md-3 col-sm-6">
                     <ul class="icons-list">
-                        <li><i  class="icon-li fa fa-check-square text-primary text-primary"></i> Personal Profile</li>
-                        <li><i  class="icon-li fa fa-check-square text-primary text-primary"></i> Chat Messaging</li>
+                        <li>
+                            <i class="icon-li fa fa-map-marker"></i>
+                            1201 Orange St Ste 600 <br>
+                            Wilmington, DE 19801
+                        </li>
+
+                        <li>
+                            <i class="icon-li fa fa-phone"></i>
+                            +1 302-415-1226
+                        </li>
+
+                        <li>
+                            <i class="icon-li fa fa-envelope"></i>
+                            <a href="mailto:careers@myabuy.com">careers@myabuy.com</a>
+                        </li>
                     </ul>
-                </div>
 
-                <div class="col-md-3 col-sm-6">
-                    <ul class="icons-list">
-                        <li><i  class="icon-li fa fa-check-square text-primary"></i> File Sharing and Storage</li>
-                        <li><i  class="icon-li fa fa-check-square text-primary"></i> 360-Degree Feedback Wizard</li>
-                 </ul>
-                </div>
+                    <br><br>
 
-                <div class="col-md-3 col-sm-6">
-                    <ul class="icons-list">
-                        <li><i  class="icon-li fa fa-check-square text-primary"></i> Mistake-Proof Messaging</li>
-                        <li><i  class="icon-li fa fa-check-square text-primary"></i> Snap Messaging</li>
-                    </ul>
-                </div>
+                    <h4 class="content-title">
+                        <span>Business Hours</span>
+                    </h4>
 
-                <div class="col-md-3 col-sm-6">
                     <ul class="icons-list">
-                        <li><i  class="icon-li fa fa-check-square text-primary"></i> Fast Customer Service</li>
-                        <li><i  class="icon-li fa fa-check-square text-primary"></i> Technical Support</li>
+                        <li>
+                            <i class="icon-li fa fa-clock-o"></i>
+                            Monday to Saturday - 9am to 6pm
+                        </li>
                     </ul>
                 </div>
             </div>
         </div>
-    </div>
   </div>
     <!--footer-->
-  
+    
          <footer class="footer">
                 <div class="container">
                     <div class="row">
@@ -195,7 +188,7 @@
                             <h4 class="title-size text-center">
                                About Us
                             </h4>
-                            <p class="About-Us text-footer text-center">        <i class="icon-li fa fa-quote-left about-us-icon"></i>&nbsp;&nbsp;360notion™ was founded on a simple idea, that people should be engaged with the company they are a part of. 
+                            <p class="About-Us text-footer text-center">        <i class="icon-li fa fa-quote-left about-us-icon"></i>&nbsp;&nbsp;360notion™ was founded on a simple idea, that people should be engaged with the company they are a part. 
                             To do this, the boardroom, break room, meeting room and file room should be centralized and remain private.&nbsp;&nbsp; <i class="icon-li fa fa-quote-right about-us-icon "></i>
                             <small class="help-block text-center text-footer">
                                 -Joel Goslar, Founder and CEO
@@ -307,7 +300,6 @@
             </div>
             
         </footer>
-        
         
             
  <!-- Bootstrap core JavaScript  -->
