--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -69,8 +69,8 @@
                 <div class="carousel-inner">
                     <div class="item active">
                         <div class="row">
-                            <div class="col-md-6 masthead-text animated fadeInUpBig">
-                                <h1 class="masthead-title">Social Network For Your Company</h1>
+                            <div class="col-md-6 masthead-text animated fadeInUpBig text-center">
+                                <h1 class="masthead-title-thin"><b class=" masthead-title-big">social network </b>for your <b class=" masthead-title-big">company</b></h1>
                                     <p class="masthead-text-">
                                         Connect, collaborate, and share what matters within your company easily and securely. Your private 360notion™ network requires a company domain email address to Create an Account.
                                     </p>
@@ -86,7 +86,7 @@
                             <div class="col-md-6 masthead-img animated pulse">
                                 <form id="signup_form" action="/signup" method="POST" class="form masthead-form well" role="form">
                                     <fieldset>
-                                        <div class="form-group">
+                                        <div class="form-group form-control-bg">
                                             <input type="text"
                                                 name="organization"
                                                 placeholder="Company Name"
@@ -136,8 +136,8 @@
 
                     <div class="item">
                         <div class="row">
-                            <div class="col-md-6 masthead-text animated fadeInLeftBig">
-                                <h1 class="masthead-title">Snap Messages</h1>
+                            <div class="col-md-6 masthead-text animated fadeInLeftBig text-center">
+                                <h1 class="masthead-title">snap messages</h1>
 
                                 <p class="masthead-text-">
                                     Delete what you share 30 seconds after the recipient opens them. 
@@ -165,8 +165,8 @@
 
                     <div class="item">
                         <div class="row">
-                            <div class="col-md-6 masthead-text animated fadeInDownBig">
-                                <h1 class="masthead-title">Mistake-Proof Messages</h1>
+                            <div class="col-md-6 masthead-text animated fadeInrightBig text-center" >
+                                <h1 class="masthead-title">mistake-proof messages</h1>
 
                                 <p class="masthead-text-">
                                    Reduce the unnecessary pressure when sending anything that may contain mistakes. Preventing stress and burnout has never been easier.
@@ -194,8 +194,8 @@
 
                     <div class="item">
                         <div class="row">
-                                <div class="col-md-6 masthead-text animated fadeInDownBig">
-                                    <h1 class="masthead-title">360-Degree Feedback</h1>
+                                <div class="col-md-6 masthead-text animated fadeInDownBig text-center">
+                                    <h1 class="masthead-title">360-degree feedback</h1>
                                     <p class="masthead-text-">
                                         Evaluate coworkers using a technique called 360-degree feedback. Implementing a 360-degree feedback system effectively using video/files can lead to dynamic and positive change.
                                     </p>
@@ -233,15 +233,15 @@
     </div>
 <!--end-->
 <!--about 360notion™-->
-<div>
+
     <div class="content">
         <div class="container">
             <div class="row">
-                <div class="col-sm-6 col-sm-push-6">
-                    <h4 class="content-title why-choose-us">
+                <div class="col-sm-6 col-sm-push-6 text-center">
+                    <h4 class="content-title title-size text-center">
                       <span>What is 360notion™</span>
                     </h4>
-                    <p>
+                    <p class="text-center">
                         Whether you are a startup or a big enterprise, you need to engage with your coworkers in order to 
                         get things done. After creating a 360notion™ network for your company, you can: 
                     </p>
@@ -250,11 +250,11 @@
                         <div class="col-sm-6">
                             <ul class="icons-list">
                                 <li>
-                                    <i class="icon-li fa fa-check text-primary"></i>
+                                    <i class="icon-li fa fa-check"></i>
                                     Share status updates
                                 </li>
                                <li> <i class="icon-li fa fa-check text-primary"></i>
-                                    Variety of communication options
+                                  Communicate and share based on context
                                 </li>
                                 <li>
                                     <i class="icon-li fa fa-check text-primary"></i>
@@ -295,13 +295,16 @@
                 </div>
             </div>
         </div>
+        </div>
           <div class="row-divider"></div>
+          
  <!--end about 360notion™-->    
 <!-- new bg-->
 <div class="why-choose360notion-bg">
- <div class="content">
+ 
+    <div class="content">
         <div class="container">
-            <h4 class="content-title why-choose-us">
+            <h4 class="content-title title-size text-center">
                 <span>Why choose 360notion™ for your company?</span>
             </h4>
             <br>
@@ -346,14 +349,15 @@
        </div> 
            </div>
        </div>    
+      
 <!-- end why choose-->
-<div class="latest-news-bg">
+<div class="backgound-color">
  <div class="content">
         <div class="container">
 
             <div class="row">
                 <div class="col-sm-6">
-                    <h4 class="content-title">
+                    <h4 class="content-title title-size text-center">
                         <span>Latest News</span>
                     </h4>
 
@@ -392,7 +396,7 @@
                 </div>
 
                 <div class="col-sm-6">
-                    <h4 class="content-title">
+                    <h4 class="content-title title-size text-center">
                       <span>Testimonials</span>
 
                       <a class="btn btn-default btn-sm carousel-prev" href="#clients-carousel" data-slide="prev">&lsaquo;</a>
@@ -440,10 +444,11 @@
                 </div>
             </div>
     </div>
-                </div>
+             
             </div>
             
    <!---->
+  
    <div class="content">
         <div class="container">
           
@@ -451,7 +456,7 @@
             <div class="carousel-container">
                 <div class="row">
                     <div class="col-sm-12">
-                        <h4 class="content-title">
+                        <h4 class="content-title title-size text-center">
                           <span>They use 360notion™</span>
 
                           <a class="btn btn-default btn-sm carousel-prev" href="#" data-slide="prev">&lsaquo;</a>
@@ -490,35 +495,35 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-3">
-                            <h4 class="content-title">
-                                <span >About Us</span>
+                            <h4 class="title-size text-center">
+                               About Us
                             </h4>
-                            <p class="About-Us">        <i class="icon-li fa fa-quote-left about-us-icon"></i>&nbsp;&nbsp;360notion™ was founded on a simple idea, that people should be engaged with the company they are a part of. 
-                            To do this, the boardroom, break room, meeting room and file room should be centralized and remain private.&nbsp;&nbsp; <i class="icon-li fa fa-quote-right about-us-icon"></i>
-                            <small class="help-block text-right">
+                            <p class="About-Us text-footer text-center">        <i class="icon-li fa fa-quote-left about-us-icon"></i>&nbsp;&nbsp;360notion™ was founded on a simple idea, that people should be engaged with the company they are a part. 
+                            To do this, the boardroom, break room, meeting room and file room should be centralized and remain private.&nbsp;&nbsp; <i class="icon-li fa fa-quote-right about-us-icon "></i>
+                            <small class="help-block text-center text-footer">
                                 -Joel Goslar, Founder and CEO
                             </small> </p>
                         </div>
 
                         <div class="col-sm-3">
-                            <h4 class="content-title">
-                                <span>Stay Connected</span>
+                           <h4 class="title-size text-center">
+                                Stay Connected
                             </h4>
 
-                            <p>
+                            <p class="text-footer text-center">
                                Add us on Facebook or follow us on Twitter
                             </p>
 
                             <br>
 
-                            <ul class="footer-social-link">
+                            <ul class="footer-social-link text-footer text-center">
                                 <li>
                                     <a href="https://www.facebook.com/360notion™"
                                         target="_blank"
                                         class="ui-tooltip"
                                         title="Facebook"
                                         data-placement="bottom">
-                                        <i class="fa fa-facebook"></i>
+                                        <i class="fa fa-facebook text-footer"></i>
                                     </a>
                                 </li>
                                 <li>
@@ -534,16 +539,16 @@
                         </div>
 
                         <div class="col-sm-3">
-                            <h4 class="content-title">
-                                <span>Stay Updated</span>
+                            <h4 class="title-size text-center">
+                              Stay Updated
                             </h4>
 
-                            <div class="subscribe-form">
-                                <p>Get emails about new features and future updates.</p>
+                            <div class="subscribe-form text-footer text-center">
+                                <p >Get emails about new features and future updates.</p>
 
                                 <form id="subscribe_form" action="/subscribe" method="POST" class="form" role="form">
                                     <fieldset>
-                                        <div class="form-group">
+                                        <div class="form-group text-center">
                                             <input type="text"
                                                 class="form-control validate[required,custom[email]]"
                                                 id="newsletter_email"
@@ -551,7 +556,7 @@
                                                 placeholder="Email Address">
                                         </div>
 
-                                        <div class="form-group">
+                                        <div class="form-group text-center">
                                             <button type="submit" class="btn btn-transparent">Notify me</button>
                                         </div>
                                     </fieldset>
@@ -564,28 +569,28 @@
                         </div>
 
 
-                        <div class="col-sm-3">
-                            <h4 class="content-title">
-                                <span>Get In Touch</span>
+                        <div class="col-sm-3 text-footer text-center">
+                            <h4 class="title-size text-center">
+                               Get In Touch
                             </h4>
 
-                            <ul class="icons-list">
-                                <li>
-                                    <i class="icon-li fa fa-map-marker"></i>
+                            
+                                <p>
+                                    
                                     1201 Orange St Ste 600 <br>
                                     Wilmington, DE 19801
-                                </li>
+                                </p
 
-                                <li>
-                                    <i class="icon-li fa fa-phone"></i>
+                                ><p>
+                                 
                                     +1 302-415-1226
-                                </li>
+                                </p>
 
-                                <li>
-                                    <i class="icon-li fa fa-envelope"></i>
+                                <p>
+                               
                                     <a href="mailto:admin@myabuy.com" class="footer-link">admin@myabuy.com</a>
-                                </li>
-                            </ul>
+                                </p>
+                          
                         </div>
                     </div>
                 </div>
