--- a/public/themes/admin/css/mvpready-admin.css
+++ b/public/themes/admin/css/mvpready-admin.css
@@ -139,7 +139,7 @@ h6,
 .h6 {
   margin-top: 0;
   margin-bottom: .75em;
-  font-family: 'Oswald';
+ 
 }
 .list-group .list-group-item .list-group-chevron {
   float: right;
@@ -237,7 +237,7 @@ h6,
 .btn-twitter {
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
+  
 }
 .btn-default:active,
 .btn-primary:active,
@@ -268,8 +268,8 @@ h6,
 }
 .btn-primary {
   color: #ffffff;
-  background-color: #d74b4b;
-  border-color: #cc2d2d;
+  background-color: #666634;;
+  border-color:  #4d4d28;
 }
 .btn-primary:hover,
 .btn-primary:focus,
@@ -277,8 +277,8 @@ h6,
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
   color: #ffffff;
-  background-color: #cc2d2d;
-  border-color: #9a2222;
+  background-color:  #4d4d28;
+  border-color:  #4d4d28;
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -300,8 +300,8 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #d74b4b;
-  border-color: #cc2d2d;
+  background-color:  #4d4d28;
+  border-color:  #4d4d28;
 }
 .btn-primary .badge {
   color: #d74b4b;
@@ -568,24 +568,20 @@ fieldset[disabled] .btn-twitter.active {
   background-color: #2aabd2;
   border-color: #28a4c9;
 }
-.btn-primary {
-  background-image: -webkit-linear-gradient(top, #d74b4b 0%, #bb2a2a 100%);
-  background-image: linear-gradient(to bottom, #d74b4b 0%, #bb2a2a 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffd74b4b', endColorstr='#ffbb2a2a', GradientType=0);
-  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
-  background-repeat: repeat-x;
-  border-color: #b32828;
+.btn-primary { color:#FFF;
+background-color:#666634;
+
 }
 .btn-primary:hover,
 .btn-primary:focus {
-  background-color: #bb2a2a;
+  background-color: #4d4d28;
   background-position: 0 -15px;
-  border-color: #b32828;
+  border-color: #4d4d28;
 }
 .btn-primary:active,
 .btn-primary.active {
-  background-color: #bb2a2a;
-  border-color: #b32828;
+  background-color: #4d4d28;
+  border-color: #4d4d28;
 }
 .btn-secondary {
   background-image: -webkit-linear-gradient(top, #6685a4 0%, #4d6781 100%);
@@ -1015,7 +1011,7 @@ fieldset[disabled] .btn-twitter.active {
 }
 .nav-tabs,
 .nav-pills {
-  margin-bottom: 1.5em;
+  margin-bottom: 0em;
 }
 .nav-tabs .caret,
 .nav-pills .caret,
@@ -1023,7 +1019,9 @@ fieldset[disabled] .btn-twitter.active {
 .nav-pills a:hover .caret {
   border-top-color: #444;
   border-bottom-color: #444;
+  
 }
+
 .nav-pills.nav-stacked > li {
   margin-right: 0;
   margin-bottom: .5em;
@@ -1035,18 +1033,24 @@ fieldset[disabled] .btn-twitter.active {
   margin-right: 6px;
 }
 .nav-pills > li > a {
-  padding: 5px 12px;
+  padding: 10px 15px;
   color: #444;
   background-color: #eee;
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
+  border-bottom-right-radius: 0px;
+  border-bottom-left-radius: 0px;
 }
+
 .nav-pills > li > a:hover {
   background-color: #e4e4e4;
 }
+
 .nav-pills > li.active > a,
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
   color: #fff;
-  background-color: #d74b4b;
+  background-color: #4b473a;
 }
 .nav-pills > li.active .caret,
 .nav-pills > li.active a:hover .caret {
@@ -1309,7 +1313,7 @@ fieldset[disabled] .btn-twitter.active {
   width: 30px;
   height: 30px;
   display: block;
-  background: #2f4354;
+  background: #696453;
   background-color: rgba(47, 67, 84, 0.85);
   font-size: 13px;
   text-align: center;
@@ -1323,7 +1327,7 @@ fieldset[disabled] .btn-twitter.active {
 }
 #back-to-top:hover {
   text-decoration: none;
-  background-color: #d74b4b;
+  background-color: #4b473a;
   background-color: rgba(215, 75, 75, 0.85);
 }
 #back-to-top i {
@@ -1536,6 +1540,20 @@ fieldset[disabled] .btn-twitter.active {
   resize: none;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
+}
+.share-widget-360-types a {
+	margin:auto;
+  display: inline-block;
+  padding-bottom: 5px;
+  text-align: center;
+  border: 1px solid transparent;
+}
+.share-widget-360-types a:hover {
+  border-color: #ccc;
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
 }
 /* !Social Feed */
 /* ----------------------------------------------- */
@@ -1904,14 +1922,10 @@ table.table thead .sorting_desc_disabled,
 /* ----------------------------------------------- */
 .navbar-inverse {
   margin-bottom: 0;
-  background-color: #2f4354;
-  background-image: -webkit-linear-gradient(top, #425d75 0%, #2f4354 100%);
-  background-image: linear-gradient(to bottom, #425d75 0%, #2f4354 100%);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff425d75', endColorstr='#ff2f4354', GradientType=0);
+  background-color: #4b473a;
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
   border: none;
-  border-bottom: 1px solid #141c23;
+  border-bottom: 1px solid #0d1216;
   border-top-right-radius: 0;
   border-top-left-radius: 0;
   border-bottom-right-radius: 0;
@@ -1919,8 +1933,9 @@ table.table thead .sorting_desc_disabled,
 }
 .navbar-inverse .navbar-collapse,
 .navbar-inverse .navbar-form {
-  border-color: #141c23;
+  border-color: #0d1216;
 }
+
 .navbar-collapse.in {
   max-height: none;
   overflow-y: visible;
@@ -1931,7 +1946,7 @@ table.table thead .sorting_desc_disabled,
 }
 .navbar-inverse .navbar-brand:hover {
   color: #fff;
-  background-color: #2c3e4e;
+  background-color: #696453;
 }
 .navbar-inverse .navbar-brand-img {
   padding-top: 0;
@@ -1970,18 +1985,18 @@ table.table thead .sorting_desc_disabled,
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
 .navbar-inverse .navbar-nav > li > a:hover {
-  background-color: #2c3e4e;
+  background-color: #696453;
 }
 .navbar-inverse .navbar-nav > li.active > a,
 .navbar-inverse .navbar-nav > li.active > a:hover,
 .navbar-inverse .navbar-nav > li.active > a:active,
 .navbar-inverse .navbar-nav > li.active > a:focus {
-  background-color: #2c3e4e;
+  background-color: #696453;
 }
 .navbar-inverse .navbar-nav > .open > a,
 .navbar-inverse .navbar-nav > .open > a:hover,
 .navbar-inverse .navbar-nav > .open > a:focus {
-  background-color: #2c3e4e;
+  background-color: #696453;
 }
 .navbar-inverse .navbar-nav > .navbar-profile > a {
   height: 60px;
@@ -2076,7 +2091,7 @@ table.table thead .sorting_desc_disabled,
   position: absolute;
   top: 17px;
   right: 2px;
-  color: #d74b4b;
+  color: #666634;
   background-color: transparent;
   border-bottom-left-radius: 0;
   border-top-left-radius: 0;
@@ -2167,7 +2182,7 @@ table.table thead .sorting_desc_disabled,
     overflow: visible !important;
   }
   .mainnav-form {
-    margin-top: 20px;
+    margin-top: 0px;
   }
   .mainnav-search-query {
     width: 120px;
@@ -2294,6 +2309,7 @@ table.table thead .sorting_desc_disabled,
 .layout-main {
   padding-top: 40px;
   padding-bottom: 26px;
+
 }
 .layout-sidebar {
   padding-top: 40px;
@@ -2310,9 +2326,9 @@ table.table thead .sorting_desc_disabled,
   -webkit-box-shadow: inset 8px 0px 15px -10px rgba(0, 0, 0, 0.2);
   box-shadow: inset 8px 0px 15px -10px rgba(0, 0, 0, 0.2);
 }
-.layout-main-right .layout-main {
-  padding-right: 15px;
-  padding-left: 30px;
+.layout-main-right {
+ padding-top: 40px;
+  padding-bottom: 26px;
 }
 .layout-main-right .layout-sidebar {
   padding-right: 30px;
@@ -2835,3 +2851,72 @@ form .required:after {
     float: right !important;
 }
 .big-font{ font-size:20px; padding-top:0px;}
+a {
+    color: #666634;
+    text-decoration: none;
+}
+
+a:hover, a:focus { color: #666634;
+    text-decoration: underline;
+}
+
+  
+
+.btn-cm{
+    background-color: #666634;
+    border-radius: 5px;
+    color: #ffffff;
+    padding: 8px;
+}
+.btn-cm:hover, .btn-cm:focus {
+    background-color: #4d4d28;
+      border-radius: 5px;
+    color: #ffffff;
+    padding: 8px;}
+.text-white{color:#FFF;}
+
+.col-sm-chat { width: 25%;}
+.col-sm-inbox { width: 50%;}
+.padding-top{ padding-top:5px;}
+.padding-top-home{ padding-top:15px;}
+.text-sidebar,
+.text-sidebar:hover {
+  color: #666634;
+}
+.list-group-item:hover {
+  color: #666634;
+}
+.title-heading {
+	padding-top:50px;
+	padding-bottom:20px;
+  font-size: 30px;
+  font-weight: 600;
+  color:#4b473a;
+  text-align:center;}
+.fa-rotate-left:before,.fa-undo:before{ font-size:18px; content:"36\f0e2"}
+.message-tab{ border-bottom: 1px solid #ddd;}
+
+.title-sidebar{
+  padding-bottom:20px;
+  font-size: 16px;
+  font-weight: 600;
+  text-align:center;
+  color:#4b473a; border-bottom: 1px solid #ddd;}
+  .chat-sidebar{ padding:10px;}
+  .chat-sidebar-padding{ padding-left:10px; text-align:left; }
+  .coworker-image img{border: 1px solid #ddd;
+    border-radius: 50px;
+    height: 50px;
+    padding: 1px;
+    width: 50px;
+	}
+	.coworker-image{ width:30%;}
+	.coworker-width{ width:70%; text-align:left; padding-left:20px;}
+	.coworker-name{ font-weight:bold;}
+	.coworker-title{text-align:left;font-style:italic; font-size:12px;}
+	.title-inbox {font-size:20px; font-weight:400;  padding-bottom:15px;}
+	.message-inbox-box { background-color:#f2f2f2; padding:15px;}
+	.padding-box {padding-bottom:10px; padding-top:10px;border-bottom: 1px dotted #ccc;}
+	.padding-box-center { padding:15px;}
+	.time{color: #999;
+    font-size: 12px;}
