--- a/public/templates/features.html
+++ b/public/templates/features.html
@@ -58,15 +58,15 @@
                 </header>
 <!--end header-->
 
-  <div class="masthead">
-  <div class="masthead-pattern">
+  <div class="why-choose360notion-bg">
+ 
         <div class="container masthead-text-title">
-            <h1 class="masthead-subtitle">
-                Feature Tour
+            <h1 class="masthead-subtitle  title-size text-center">
+                <b class="masthead-title-big">Feature Tour</b>
             </h1>
         </div>
-    </div>
-	</div>
+    
+	
     <div class="content">
         <div class="container">
             <div class="layout layout-stack-sm layout-main-right">
@@ -124,22 +124,19 @@
                     <div class="tab-content stacked-content">
                         <div class="tab-pane fade in active" id="mobile-tab">
                             <h3 class="content-title">
-                                <span>Mobile Friendly Design</span>
+                                <strong> Mobile Friendly Design</strong>
                             </h3>
 
-                            <img src="../themes/landing/img/tour/iphone.png"
-                                class="pull-right animated fadeInRightBig"
-                                style="margin-bottom: 30px; margin-left: 50px;"
-                                alt="iPhone">
+                            <img src="">
 
-                            <p>
+                            <b class="About-Us "  >
                                You should be able to connect with coworkers whether they are in the field, on the road, or even at home. That is why we designed 360notion™ to work well with a wide array of devices including smart phones and tablets.
-                            </p>
+                            </b>
                         </div>
 
-                        <div class="tab-pane fade" id="snap-tab">
+                        <div class="tab-pane fade About-Us" id="snap-tab">
                             <h3 class="content-title">
-                                <span>Snap Messages</span>
+                                <strong>Snap Messages</strong>
                             </h3>
 
                             <p>
@@ -152,9 +149,9 @@
                             </p>
                         </div>
 
-                        <div class="tab-pane fade" id="mistake-tab">
+                        <div class="tab-pane fade  About-Us" id="mistake-tab">
                             <h3 class="content-title">
-                                <span>Mistake-Proof Messages</span>
+                                <strong>Mistake-Proof Messages</strong>
                             </h3>
 
                             <p>
@@ -167,9 +164,9 @@
                             </p>
                         </div>
 
-                        <div class="tab-pane fade" id="feedback">
+                        <div class="tab-pane fade About-Us" id="feedback">
                             <h3 class="content-title">
-                                <span>360-degree Feedback </span></h3>
+                                <strong>360-degree Feedback </strong></h3>
 
                             <p>
                                 Securely store and share files within your company.
@@ -182,9 +179,9 @@
                             </p>
                         </div>
 
-                        <div class="tab-pane fade" id="files">
+                        <div class="tab-pane fade About-Us" id="files">
                             <h3 class="content-title">
-                                <span>File Storage</span></h3>
+                                <strong>File Storage</strong></h3>
 
                             <p>
                                 Need to backup files or share them with your co-workers? 
@@ -197,9 +194,9 @@
                             </p>
                         </div>
 
-                        <div class="tab-pane fade" id="status">
+                        <div class="tab-pane fade About-Us" id="status">
                             <h3 class="content-title">
-                                <span>Status Updates </span></h3>
+                                <strong>Status Updates </strong></h3>
 
                             <p>
                             Need to remind your company about something? Or broadcast an important announcement to everyone?
@@ -213,42 +210,42 @@
             </div>
         </div>
     </div>
-  
+  </div>
     <!--footer-->
     
-     <footer class="footer">
+         <footer class="footer">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-3">
-                            <h4 class="content-title">
-                                <span >About Us</span>
+                            <h4 class="title-size text-center">
+                               About Us
                             </h4>
-                            <p class="About-Us">        <i class="icon-li fa fa-quote-left about-us-icon"></i>&nbsp;&nbsp;360notion™ was founded on a simple idea, that people should be engaged with the company they are a part of. 
-                            To do this, the boardroom, break room, meeting room and file room should be centralized and remain private.&nbsp;&nbsp; <i class="icon-li fa fa-quote-right about-us-icon"></i>
-                            <small class="help-block text-right">
+                            <p class="About-Us text-footer text-center">        <i class="icon-li fa fa-quote-left about-us-icon"></i>&nbsp;&nbsp;360notion™ was founded on a simple idea, that people should be engaged with the company they are a part. 
+                            To do this, the boardroom, break room, meeting room and file room should be centralized and remain private.&nbsp;&nbsp; <i class="icon-li fa fa-quote-right about-us-icon "></i>
+                            <small class="help-block text-center text-footer">
                                 -Joel Goslar, Founder and CEO
                             </small> </p>
                         </div>
 
                         <div class="col-sm-3">
-                            <h4 class="content-title">
-                                <span>Stay Connected</span>
+                           <h4 class="title-size text-center">
+                                Stay Connected
                             </h4>
 
-                            <p>
+                            <p class="text-footer text-center">
                                Add us on Facebook or follow us on Twitter
                             </p>
 
                             <br>
 
-                            <ul class="footer-social-link">
+                            <ul class="footer-social-link text-footer text-center">
                                 <li>
-                                    <a href="https://www.facebook.com/360notion"
+                                    <a href="https://www.facebook.com/360notion™"
                                         target="_blank"
                                         class="ui-tooltip"
                                         title="Facebook"
                                         data-placement="bottom">
-                                        <i class="fa fa-facebook"></i>
+                                        <i class="fa fa-facebook text-footer"></i>
                                     </a>
                                 </li>
                                 <li>
@@ -264,16 +261,16 @@
                         </div>
 
                         <div class="col-sm-3">
-                            <h4 class="content-title">
-                                <span>Stay Updated</span>
+                            <h4 class="title-size text-center">
+                              Stay Updated
                             </h4>
 
-                            <div class="subscribe-form">
-                                <p>Get emails about new features and future updates.</p>
+                            <div class="subscribe-form text-footer text-center">
+                                <p >Get emails about new features and future updates.</p>
 
                                 <form id="subscribe_form" action="/subscribe" method="POST" class="form" role="form">
                                     <fieldset>
-                                        <div class="form-group">
+                                        <div class="form-group text-center">
                                             <input type="text"
                                                 class="form-control validate[required,custom[email]]"
                                                 id="newsletter_email"
@@ -281,7 +278,7 @@
                                                 placeholder="Email Address">
                                         </div>
 
-                                        <div class="form-group">
+                                        <div class="form-group text-center">
                                             <button type="submit" class="btn btn-transparent">Notify me</button>
                                         </div>
                                     </fieldset>
@@ -294,28 +291,28 @@
                         </div>
 
 
-                        <div class="col-sm-3">
-                            <h4 class="content-title">
-                                <span>Get In Touch</span>
+                        <div class="col-sm-3 text-footer text-center">
+                            <h4 class="title-size text-center">
+                               Get In Touch
                             </h4>
 
-                            <ul class="icons-list">
-                                <li>
-                                    <i class="icon-li fa fa-map-marker"></i>
+                            
+                                <p>
+                                    
                                     1201 Orange St Ste 600 <br>
                                     Wilmington, DE 19801
-                                </li>
+                                </p
 
-                                <li>
-                                    <i class="icon-li fa fa-phone"></i>
+                                ><p>
+                                 
                                     +1 302-415-1226
-                                </li>
+                                </p>
 
-                                <li>
-                                    <i class="icon-li fa fa-envelope"></i>
+                                <p>
+                               
                                     <a href="mailto:admin@myabuy.com" class="footer-link">admin@myabuy.com</a>
-                                </li>
-                            </ul>
+                                </p>
+                          
                         </div>
                     </div>
                 </div>
@@ -335,7 +332,6 @@
             </div>
             
         </footer>
-        
         
             
  <!-- Bootstrap core JavaScript  -->
