--- a/public/templates/inbox.html
+++ b/public/templates/inbox.html
@@ -206,7 +206,7 @@
                 </div>
             </header>
 <!--end header-->
-<div class="content">
+
         <div class="container">
           <div class="row">
                      <div class="col-md-3">
@@ -249,248 +249,158 @@
         </a>
     </div>
                 </div>
-                <div class="col-md-6 col-sm-7">
-                    <h4 class="title-heading text-center">My Activity Stream</h4>
-                    <div class="share-widget clearfix">
-                        <!-- Post an Idea -->
-                        <div id="post_idea_container" class="fb-container">
-                            <textarea class="form-control share-widget-textarea" rows="3" placeholder="Conduct 360-degree feedback" tabindex="1"></textarea>
-                        </div>
-<!-- -->
-<div class="box-border">
-<div id="possible_answer">
-        1. Possible answer
+                
+                <!--inbox-->
+                <div class="col-md-6 col-sm-inbox layout-main">
+                
+                <div class="pull-right btn-cm"> Compose Message </div>
+                <div> 
+ <Div class="message-tab">
+                    <ul id="myTab2" class="nav nav-pills">
+<li class="active">
+<a data-toggle="tab" href="#inbox">Inbox</a>
+</li>
+<li>
+<a data-toggle="tab" href="#sent">Sent</a>
+</li>
+</ul>
+</Div>
+
+
+<div id="myTab2Content" class="tab-content">
+<div id="inbox" class="tab-pane fade in active padding-box-center ">
+<div>
+	<div class="row title-inbox text-center"> Unread Messages</div>
+	
+    <div class="row padding-box">
+	<div class="col-md-6 "><div class="col-xs-6 coworker-image "><img src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/></div>
+	<div class="col-xs-6 coworker-width"> 
+		<a class="coworker-name">Lizzel</a>
+        <p class="coworker-title">Snap message</p>
+     </div></div>
+	<div class=" col-sm-3"> <a><i class="fa fa-lock text-sidebar"></i>
+  Unlock to view </a></div>
+	<div class="col-sm-3 time "><p> <i class="fa fa-clock-o"></i> &nbsp;2pm 15/9/2012 </div>
+	</div>
+    
+    
+    <div class="row padding-box ">
+	<div class="col-md-6 "><div class="col-xs-6 coworker-image "><img src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/></div>
+	<div class="col-xs-6 coworker-width"> 
+		<a class="coworker-name">Lizzel</a>
+        <p class="coworker-title">Standard message</p>
+     </div></div>
+	<div class=" col-sm-3"> <a>
+ View </a></div>
+	<div class="col-sm-3 time"><p><i class="fa fa-clock-o"></i> &nbsp; 3pm 15/9/2012 </div>
+	</div>
     </div>
     
-    <div id="add_possible_answer">
-        <i class="fa fa-plus padding remove_icon"></i>Add possible answer
-    </div>
-    
-    <div class="row 
-boder-top ">
-    <div class="col-md-4 text-center"><i class="fa fa-question padding feedback360_icon "></i>Ask another question </div>
-    <div class="col-md-4 text-center"> <i class="fa fa-file padding feedback360_icon"></i>Attach file</div>
-    <div class="col-md-4 text-center">  <i class="fa fa-video-camera padding feedback360_icon"></i>Attach video</div>
-    </div>
+    <div>
+	<div class="padding-box-center title-inbox text-center"> History</div>
     
     
-    <div  id="feedback360"  >
-        
+	
+    <div class="row padding-box">
+      
+	<div class="col-md-6 "><div class="col-xs-6 coworker-image "><img src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/></div>
+	<div class="col-xs-6 coworker-width"> 
+		<a class="coworker-name">Lizzel</a>
+        <p class="coworker-title">Lorem ipsum dolor sit amet...</p>
+     </div></div>
+	<div class=" col-sm-3"> <a >Mon</a></div>
+	<div class="col-sm-3 time "><p>view threads&nbsp; |&nbsp; Delete threads </div>
+	</div>
+    
+    
+    <div class="row padding-box ">
+	<div class="col-md-6 "><div class="col-xs-6 coworker-image "><img src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/></div>
+	<div class="col-xs-6 coworker-width"> 
+		<a class="coworker-name">Lizzel</a>
+        <p class="coworker-title">latest message here...</p>
+     </div></div>
+	<div class=" col-sm-3"> <a>Mon</a></div>
+	<div class="col-sm-3 time">view threads&nbsp; |&nbsp; Delete threads  </div>
+	</div>
     </div>
     
-    <div id="announcement" >
-        <div class="announcement_list">
-        <i class="fa fa-users entirecompany_icon padding text-sidebar "></i>Entire Company <i class="fa fa-times padding remove_icon"></i>
-        </div>
-        <div class="announcement_list">
-        ntthuy@gmail.com <i class="fa fa-times padding remove_icon"></i>
-        </div>    
-        <div class="inline-block" >
-        <i class="fa fa-plus padding remove_icon"></i>Add People
-        </div>
-    </div>
-    </div>
-    <!-- -->
-                        <!-- Post an Image -->
-                        <div id="post_image_container" class="fb-container hidden">
-                            <textarea class="form-control share-widget-textarea" rows="3" placeholder="What do you want to share?" tabindex="1"></textarea>
-                            <div class="upload-file">
-                                <div class="upload-file-details">
-                                    <img class="image-preview" src="{@imgUrl key="{user.avatarKey}"/}" width="40" height="40"/>
-                                    <p>File name</p>
-                                    <p class="upload-message">File attached successfully<p>
-                                </div>
-                                <div class="fa fa-times close remove-icon-upload"></div>
-                            </div>
-                        </div>
+</div>
+<!--sent-->
 
-                        <!-- Upload a File -->
-                        <div id="upload_file_container" class="fb-container hidden">
-                            <textarea class="form-control share-widget-textarea" rows="3" placeholder="What do you want to share?" tabindex="1"></textarea>
-                        </div>
-
-                        <!-- Ask a Question -->
-                        <div id="ask_question_container" class="fb-container hidden">
-                            <textarea class="form-control share-widget-textarea" rows="3" placeholder="Conduct 360-degree feedback" tabindex="1"></textarea>
-                        </div>
-
-                        <div class="share-widget-actions"> 
-                         <div class="pull-right">
-                                <a class="btn btn-primary btn-sm" tabindex="2">Post</a>
-                            </div>
-                            <div class="share-widget-types pull-left">
-                                   <a href="#" class="fa fa-lightbulb-o ui-tooltip box-post-idea active" title="Post an Idea" data-open="#post_idea_container"></a>
-                                <a href="#" class="fa fa-picture-o ui-tooltip box-post-image" title="Post an Image" data-open="#post_image_container"></a>
-                                <a href="#" class="fa fa-paperclip ui-tooltip box-post-file" title="Upload a File" data-open="#upload_file_container"></a>
-                                <a href="#" class="fa fa-rotate-left ui-tooltip box-post-idea active" title="Conduct 360-degree feedback" data-open="#post_idea_container"></a> &nbsp;&nbsp;
-                            </div>  
-
-                           <!---->
-                        </div>
-                    </div>
-
-                    <br><br>
-
-                    <div class="feed-item feed-item-idea">
-                        <div class="feed-icon">
-                            <i class="fa fa-lightbulb-o"></i>
-                        </div>
-
-                        <div class="feed-subject">
-                            <p>
-                                <a href="javascript:;">Shami Hoang</a> shared an idea:
-                            </p>
-                        </div>
-
-                        <div class="feed-content">
-                            <ul class="icons-list">
-                                <li>
-                                    <i class="icon-li fa fa-quote-left"></i>
-                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
-                                    Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis 
-                                    parturient montes.
-                                </li>
-                            </ul>
-                        </div>
-
-                        <div class="feed-actions">
-                            <a href="javascript:;" class="pull-left"><i class="fa fa-thumbs-up"></i> 123</a> 
-                            <a href="javascript:;" class="pull-left"><i class="fa fa-comment-o"></i> 29</a>
-
-                            <a href="javascript:;" class="pull-right"><i class="fa fa-clock-o"></i> 2 days ago</a>
-                        </div>
-                    </div>
-
-                    <div class="feed-item feed-item-image">
-                        <div class="feed-icon">
-                            <i class="fa fa-picture-o"></i>
-                        </div>
-
-                        <div class="feed-subject">
-                            <p>
-                                <a href="javascript:;">Shami Hoang</a> posted <strong>4 files</strong>: 
-                                <a href="javascript:;">Annual Reports</a>
-                            </p>
-                        </div>
-
-                        <div class="feed-content">
-                            <div class="thumbnail" style="width: 375px">
-                                <img src="/themes/admin/img/mockup.png" style="width: 100%;" alt="Gallery Image">
-                            </div>
-                        </div>
-
-                        <div class="feed-actions">
-                            <a href="javascript:;" class="pull-left"><i class="fa fa-thumbs-up"></i> 123</a> 
-                            <a href="javascript:;" class="pull-left"><i class="fa fa-comment-o"></i> 29</a>
-
-                            <a href="javascript:;" class="pull-right"><i class="fa fa-clock-o"></i> 2 days ago </a>
-                        </div>
-                    </div>
-
-                    <div class="feed-item feed-item-file">
-                        <div class="feed-icon">
-                            <i class="fa fa-paperclip"></i>
-                        </div>
-
-                        <div class="feed-subject">
-                            <p>
-                                <a href="javascript:;">Shami Hoang</a> posted <strong>4 files</strong>: 
-                                <a href="javascript:;">Annual Reports</a>
-                            </p>
-                        </div>
-
-                        <div class="feed-content">
-                            <ul class="icons-list">
-                                <li>
-                                    <i class="icon-li fa fa-file-text-o"></i>
-                                    <a href="javascript:;">Annual Report 2007</a> - annual_report_2007.pdf
-                                </li>
-
-                                <li>
-                                    <i class="icon-li fa fa-file-text-o"></i>
-                                    <a href="javascript:;">Annual Report 2008</a> - annual_report_2007.pdf
-                                </li>
-
-                                <li>
-                                    <i class="icon-li fa fa-file-text-o"></i>
-                                    <a href="javascript:;">Annual Report 2009</a> - annual_report_2007.pdf
-                                </li>
-
-                                <li>
-                                    <i class="icon-li fa fa-file-text-o"></i>
-                                    <a href="javascript:;">Annual Report 2010</a> - annual_report_2007.pdf
-                                </li>
-                            </ul>
-                        </div>
-
-                        <div class="feed-actions">
-                            <a href="javascript:;" class="pull-left"><i class="fa fa-thumbs-up"></i> 123</a> 
-                            <a href="javascript:;" class="pull-left"><i class="fa fa-comment-o"></i> 29</a>
-
-                            <a href="javascript:;" class="pull-right"><i class="fa fa-clock-o"></i> 2 days ago</a>
-                        </div>
-                    </div>
-
-                    <div class="feed-item feed-item-bookmark">
-                        <div class="feed-icon">
-                            <i class="fa fa-bookmark"></i>
-                        </div>
-
-                        <div class="feed-subject">
-                            <p>
-                                <a href="javascript:;">Shami Hoang</a> bookmarked a page on Delicious: 
-                                <a href="javascript:;">Jumpstart Themes</a>
-                            </p>
-                        </div>
-
-                        <div class="feed-content"></div>
-
-                        <div class="feed-actions">
-                            <a href="javascript:;" class="pull-left"><i class="fa fa-thumbs-up"></i> 123</a> 
-                            <a href="javascript:;" class="pull-left"><i class="fa fa-comment-o"></i> 29</a>
-
-                            <a href="javascript:;" class="pull-right"><i class="fa fa-clock-o"></i> 2 days ago</a>
-                        </div>
-                    </div>
-
-                    <div class="feed-item feed-item-question">
-                        <div class="feed-icon">
-                            <i class="fa fa-question"></i>
-                        </div>
-
-                        <div class="feed-subject">
-                            <p>
-                                <a href="javascript:;">Shami Hoang</a> posted the question: 
-                                <a href="javascript:;">Who can I call to get a new parking pass for the Rowan Building?</a>
-                            </p>
-                        </div>
-
-                        <div class="feed-content">
-                            <ul class="icons-list">
-                                <li>
-                                    <i class="icon-li fa fa-quote-left"></i>
-                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. 
-                                    Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes.
-                                </li>
-                            </ul>
-                        </div>
-
-                        <div class="feed-actions">
-                            <a href="javascript:;" class="pull-left"><i class="fa fa-thumbs-up"></i> 123</a> 
-                            <a href="javascript:;" class="pull-left"><i class="fa fa-comment-o"></i> 29</a>
-
-                            <a href="javascript:;" class="pull-right"><i class="fa fa-clock-o"></i> 2 days ago</a>
-                        </div>
-                    </div>
-
-                    <br class="visible-xs">
-                    <br class="visible-xs">
-                </div>
-<!--project-->
-        
-              
-                <!--end-->
-            </div>
+	
+    
+<div id="sent" class="tab-pane fade active in">
+<div class="row padding-box">
+     
+	<div class="col-md-6 "><div class="col-xs-6 coworker-image "><img src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/></div>
+	<div class="col-xs-6 coworker-width"> 
+		You to &nbsp;<a class="coworker-name">Lizzel</a>
+        <p class="coworker-title">latest message</p>
+     </div></div>
+	<div class=" col-sm-3"> <a> <li class="fa fa-paperclip">&nbsp;&nbsp;Unread</li></a></div>
+	<div class="col-sm-3 time "><p><i class="fa fa-pencil"></i> &nbsp; <i class="fa fa-times"></i>  &nbsp; </p> <p>2pm 15/9/2012</p>  </div>
+	</div>
+    
+    
+    <div class="row padding-box ">
+	<div class="col-md-6 "><div class="col-xs-6 coworker-image "><img src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/></div>
+	<div class="col-xs-6 coworker-width"> 
+		You to &nbsp;<a class="coworker-name">Lizzel</a>
+        <p class="coworker-title">latest message here...</p>
+     </div></div>
+	<div class=" col-sm-3"> <a> <li class="fa fa-paperclip">&nbsp;&nbsp;Unread</li></a></div>
+	<div class="col-sm-3 time"><p><i class="fa fa-pencil"></i> &nbsp; <i class="fa fa-times"></i>  &nbsp; </p> <p>2pm 15/9/2012</p>  </div>
+	</div>
+</div>
+</div>    
+  				</div>
+                
+               
+    </div> 
+   <!--chat-->
+ <div class=" col-md-6 col-sm-chat  layout-main-right">
+ <p class="title-sidebar ">
+ 
+       Chat With Coworkers </p>
+       <p>
+   
+    
+<div class="row chat-sidebar">
+	 <form class="mainnav-form pull-right" role="search">
+<input class="form-control input-md mainnav-search-query" type="text" placeholder="Search for coworker">
+<button class="btn btn-sm mainnav-form-btn">
+<i class="fa fa-search"></i>
+</button>
+</form>
+</div>
+ 
+ <div class="row chat-sidebar">
+	<div class="col-xs-6 coworker-image "><img src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/></div>
+	<div class="col-xs-6 coworker-width"> 
+		<a class="coworker-name">Lizzel</a>
+        <p class="coworker-title">Marketing Manager</p>
+     </div>
+	</div>  
+ <div class="row chat-sidebar">
+	<div class="col-xs-6 coworker-image "><img src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/></div>
+	<div class="col-xs-6 coworker-width"> 
+		<a class="coworker-name">Lizzel</a>
+        <p class="coworker-title">Marketing Manager</p>
+     </div>
+	</div>
+    <div class="row chat-sidebar">
+	<div class="col-xs-6 coworker-image "><img src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/></div>
+	<div class="col-xs-6 coworker-width"> 
+		<a class="coworker-name">Lizzel</a>
+        <p class="coworker-title">Marketing Manager</p>
+     </div>
+	</div>
+       <div class="row chat-sidebar pull-right">
+		<a>See All Coworkers</a>
+     </div>
+	</div>
+  </div>
+            
         </div>
     </div>
         
@@ -512,3 +422,6 @@ boder-top ">
 
     
 </html>
+
+
+
