--- a/public/themes/landing/css/mvpready-landing-new-style.css
+++ b/public/themes/landing/css/mvpready-landing-new-style.css
@@ -21,7 +21,7 @@ body {
 /* ----------------------------------------------- */
 .text-primary,
 .text-primary:hover {
-  color: #ac618d;
+  color: #4b473a;
 }
 .text-secondary,
 .text-secondary:hover {
@@ -59,6 +59,22 @@ body {
 .text-xl {
   font-size: 24px;
 }
+
+
+
+.question-box {
+	background-image:url(../img/masthead/pattern-footer.png);
+	background-position:top;
+	background-repeat:repeat-x;
+	background-color:#D6D1BD;
+    border: 1px solid #928e83;
+    border-radius: 8px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05) inset;
+    min-height: 50px;
+	padding:20px;
+
+}
+
 /* !Buttons */
 /* ----------------------------------------------- */
 .btn-default,
@@ -139,8 +155,8 @@ fieldset[disabled] .btn-primary.active {
   background-color: #fff;
 }
 .btn-secondary-new {
-    background-image: linear-gradient(to bottom, #666634 0%, #505029 100%);
-     border:1px solid #878747;
+    background-image: linear-gradient(to bottom, #666634 0%, #666634 100%);
+     border:1px solid #FFF;
     color: #ffffff;
     height: 52px;
     margin: auto;
@@ -155,7 +171,7 @@ fieldset[disabled] .btn-primary.active {
   color: #ffffff;
   background-color: #7f7f42;
  
-    border:1px solid #878747;
+    border:1px solid #FFF;
 }
 .btn-secondary:active,
 .btn-secondary.active,
@@ -311,7 +327,7 @@ fieldset[disabled] .btn-twitter.active {
     background-color: #666634;
     background-image:none;
     background-repeat: none;
-    border-color: none;
+    border-color:#FFF;
     color: #ffffff;
     text-shadow: 0 0px 0 #fff;
 }
@@ -392,18 +408,18 @@ fieldset[disabled] .btn-twitter.active {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff5bc0de', endColorstr='#ff2aabd2', GradientType=0);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
   background-repeat: repeat-x;
-  border-color: #28a4c9;
+  border-color: #666634;;
 }
 .btn-info:hover,
 .btn-info:focus {
   background-color: #2aabd2;
   background-position: 0 -15px;
-  border-color: #28a4c9;
+  border-color: #666634;
 }
 .btn-info:active,
 .btn-info.active {
   background-color: #2aabd2;
-  border-color: #28a4c9;
+  border-color:#666634;
 }
 .btn-primary {
   background-image: -webkit-linear-gradient(top, #d74b4b 0%, #bb2a2a 100%);
@@ -799,7 +815,7 @@ fieldset[disabled] .btn-twitter.active {
 .table-bordered thead tr th,
 .table-bordered tfoot tr th {
   color: #444;
-  font-size: 12px;
+  font-size: 13px;
   font-weight: 800;
   background-color: transparent;
   border-bottom-width: 1px;
@@ -969,7 +985,7 @@ fieldset[disabled] .btn-twitter.active {
 }
 .accordion-simple .panel .panel-heading {
   padding-right: 0;
-  padding-left: 0;
+  padding-left: 10;
 }
 .accordion-simple .panel .panel-body {
   padding-left: 25px;
@@ -991,14 +1007,15 @@ fieldset[disabled] .btn-twitter.active {
   width: 16px;
   height: 16px;
   margin-right: .35em;
-  color: #d74b4b;
+  color: #4b473a;
   font-size: 1.25em;
-  content: "\f0d7";
+  content: "\f0da";
+ 
 }
 .is-open .accordion-caret:before {
-  content: "\f0da";
+   content: "\f0d7";
 }
-h1,
+h1 {font-family: 'Helvetica',arial, sans-serif;}
 h2,
 h3,
 h4,
@@ -1006,7 +1023,7 @@ h5,
 h6 {
   margin-top: 0;
   margin-bottom: .75em;
-  font-family: 'Oswald';
+  font-family: 'Helvetica', arial, sans-serif;
 }
 p {
   line-height: 1.7em;
@@ -1029,7 +1046,7 @@ p {
   font-weight: 600;
 }
 .row-divider {
-  margin-top: 50px;
+  margin-top: 10px;
 }
 /* !Icons List */
 /* ----------------------------------------------- */
@@ -1073,7 +1090,7 @@ p {
     padding: 15px;
     margin: -25px -15px 15px;
     color: #FFF;
-    background-color: #623550;
+    background-color: #4b473a;
     border-top-right-radius: 4px;
     border-top-left-radius: 4px;
 }
@@ -1155,7 +1172,7 @@ p {
   left: 0;
   width: 0;
   height: 0;
-  border-bottom: 6px solid #623550;
+  border-bottom: 6px solid #4b473a;
   border-right: 14px solid transparent;
   border-left: 14px solid transparent;
 }
@@ -1205,7 +1222,7 @@ p {
   width: 30px;
   height: 30px;
   display: block;
-  background: #4d4d28;
+  background: #D6D1BD;
   font-size: 13px;
   text-align: center;
   line-height: 30px;
@@ -1217,12 +1234,13 @@ p {
  
 }
 #back-to-top:hover {
+	color:#D6D1BD;
   text-decoration: none;
-  background-color: #4d4d28;
+  background-color:#999586;
   background-color:none;
 }
 #back-to-top i {
-  color: #ffffff;
+  color:#4B473A;
 }
 @media (min-width: 768px) {
   #back-to-top {
@@ -1238,7 +1256,7 @@ p {
 /* ----------------------------------------------- */
 .navbar-inverse {
   margin-bottom: 0;
-  background-color: #623550;
+  background-color: #4b473a;
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
   border: none;
   border-bottom: 1px solid #0d1216;
@@ -1261,7 +1279,7 @@ p {
 }
 .navbar-inverse .navbar-brand:hover {
   color: #fff;
-  background-color: #6a3a57;
+  background-color: #4b473a;
 }
 .navbar-inverse .navbar-brand-img {
   padding-top: 0;
@@ -1271,7 +1289,7 @@ p {
   padding: 0 18px;
   margin: 0;
   height: 50px;
-  color: #fff;
+
   color: #ffffff;
   font-size: 17px;
   text-align: center;
@@ -1288,8 +1306,8 @@ p {
   background-color: transparent;
 }
 .navbar-inverse .navbar-toggle:hover {
-  color: #666634;
-  background-color: #4d4d28;
+  color: #ffffff;
+  background-color: #696452;
 }
 .navbar-inverse .navbar-toggle.is-open {
   color: #fff;
@@ -1406,11 +1424,11 @@ p {
   border-bottom: 1px solid transparent;
 }
 .navbar-inverse .navbar-nav > li > a:hover {
-  background: #4d4d28;
+  background: #696453;
   border-bottom-color: #ffffff;
 }
 .navbar-inverse .navbar-nav > li.active > a {
-  background: #4E4E28;
+  background: #696453;
   border-bottom-color: #d74b4b;
 }
 .navbar-social-label {
@@ -1462,24 +1480,36 @@ p {
   padding-top: 15px;
   color: #fff;
   font-size: 13px;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
+  text-shadow: 0px 0px 0px rgba(0, 0, 0, 0.4);
 }
 .masthead-text-title {
   padding-top: 15px;
   color: #fff;
   font-size: 13px;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
+  text-shadow: 0px 0px 0px rgba(0, 0, 0, 0.4);
 }
 .masthead-text- {
-  padding-top: 13px;
-  color: #fff;
+  padding-top: 3px;
+  color: #4b473a;
   font-size: 15px;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
+  text-shadow: 1px 1px 2px #feba0e);
 }
 .masthead-title {
   font-size: 40px;
-  font-weight: 400;
+  font-weight: 600;
+  color:#4b473a;
+  text-align:center;
 }
+.masthead-title-thin {
+  font-size: 40px;
+  font-weight: 200;
+  color:#4b473a;
+  text-align:center;}
+  .masthead-title-big {
+  font-size: 45px;
+  font-weight: 600;
+  color:#4b473a;
+  text-align:center;}
 .masthead-img {
   text-align: center;
 }
@@ -1495,7 +1525,7 @@ p {
 .masthead-subtitle {
   padding: 12px 0;
   margin-bottom: 0;
-  color: #fff;
+ color: #4b473a;
   font-size: 24px;
   font-weight: 400;
 }
@@ -1570,13 +1600,13 @@ p {
 }
 .content {
   padding-top: 40px;
-  padding-bottom: 70px;
+  padding-bottom: 30px;
 }
 .content-title {
   position: relative;
   display: block;
   margin-bottom: 1.35em;
-  border-bottom: 1px solid #b6b6b6;
+  border-bottom: 0px;
 }
 .content-title span {
   display: inline-block;
@@ -1584,7 +1614,7 @@ p {
   top: 1px;
   padding-right: 1em;
   padding-bottom: 15px;
-  border-bottom: 1px solid #ac618d;
+  border-bottom: 0px;
 }
 .content-title .carousel-next,
 .content-title .carousel-prev {
@@ -1643,7 +1673,7 @@ p {
 .nav-layout-sidebar-skip {
   display: none;
   margin-bottom: 1em;
-  font-size: 12px;
+  font-size: 13px;
   text-align: center;
 }
 .nav-layout-sidebar {
@@ -1821,31 +1851,37 @@ p {
 .footer-social-link {
   padding: 0;
   margin: 0;
+   color: #4b473a;
 }
 .footer-social-link li {
   display: inline-block;
   margin: 0 12px 15px;
   list-style-type: none;
+   color: #4b473a;
 }
 .footer-social-link li a {
   font-size: 24px;
 }
 .footer-social-link li a:hover {
-  color: #fff;
+  color: #4b473a;
 }
 .footer {
   padding: 35px 0 0;
-  color: #fff;
-background: #623550;
+  color: #4b473a;
+background-color:#D6D1BD;
+background-image:url(../img/masthead/pattern-footer.png);
+background-repeat:repeat-x;
+background-position:top;
   border-top: 1px solid #fff;
   -webkit-box-shadow: -1px -1px 2px rgba(0, 0, 0, 0.3);
   box-shadow: -1px -1px 2px rgba(0, 0, 0, 0.3);
 }
 .footer .content-title {
-  border-bottom-color: #dadada;
+  border-bottom-color: #ffffff;
+     font-size: 20px;
 }
 .footer span {
-  border-bottom-color: #fad100;
+  border-bottom-color: #4b473a;
 }
 .footer .container > .row > div {
   margin-bottom: 50px;
@@ -1859,8 +1895,8 @@ background: #623550;
   padding: 20px 0;
   color: #fff;
   line-height: 59px;
-  background: #623550;
-  border-top: 1px solid #914f77;
+  background: #4b473a;
+
 }
 .copyright:before,
 .copyright:after {
@@ -1874,7 +1910,7 @@ background: #623550;
   margin-bottom: 0;
 }
 .footer a, .copyright a {
-    color: #ffffff;
+    color: #4b473a;
 }
 /* !Mini Features */
 /* ----------------------------------------------- */
@@ -1894,7 +1930,7 @@ background: #623550;
   font-size: 50px;
   text-align: center;
   line-height: 48px;
-  color:#666634;
+  color:#4b473a;
 }
 .mini-feature-text {
   display: block;
@@ -1902,7 +1938,7 @@ background: #623550;
   text-align: center;
 }
 .mini-feature-title {
-    color: #666634;
+    color: #4b473a;
     font-size: 22px;
     font-weight: 400;
     padding-bottom: 10px;
@@ -1962,11 +1998,11 @@ background: #623550;
  color: #fff;
   margin: 0;
   font-weight: 500;
-  background: #623550;
-  background-image: -webkit-linear-gradient(top, #623550 0%, #623550 100%);
-  background-image: linear-gradient(to bottom, #623550 0%, #623550 100%);
+  background: #4b473a;
+  background-image: -webkit-linear-gradient(top, #4b473a 0%, #4b473a 100%);
+  background-image: linear-gradient(to bottom, #4b473a 0%, #4b473a 100%);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#623550', endColorstr='#623550', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#4b473a', endColorstr='#4b473a', GradientType=0);
   border: 1px solid #ddd;
   border-top-right-radius: 2px;
   border-top-left-radius: 2px;
@@ -1981,9 +2017,9 @@ background: #623550;
   margin-top: -8px;
   margin-bottom: 10px;
   margin-left: 45px;
-  background-color: #623550;
-  border-bottom: 1px solid #623550;
-  border-right: 1px solid #623550;
+  background-color: #4b473a;
+  border-bottom: 1px solid #4b473a;
+  border-right: 1px solid #4b473a;
   border-top: 0;
   -webkit-transform: rotate(45deg);
   -moz-transform: rotate(45deg);
@@ -2026,13 +2062,13 @@ background: #623550;
   margin: 0;
 }
 .recent-news-item-title a {
-  color: #623550;
+  color: #4b473a;
 }
 .recent-news-item-date {
-    background: none repeat scroll 0 0 #666634;
+    background: none repeat scroll 0 0  #d6d1bd;
     border-top-left-radius: 3px;
     border-top-right-radius: 3px;
-    color: #ffffff;
+    color:#4B473A;
     float: left;
     font-size: 20px;
     font-weight: 500;
@@ -2049,7 +2085,7 @@ background: #623550;
   font-size: 11px;
   font-weight: 500;
   line-height: 11px;
-  background: #623550;
+  background: #4b473a;
   text-transform: uppercase;
   border-bottom-right-radius: 3px;
   border-bottom-left-radius: 3px;
@@ -2139,26 +2175,28 @@ fieldset[disabled] .footer .btn-transparent.active {
 }
 
 .well {
-    background-color: #623550;
-    border: 1px solid #e3e3e3;
+	background-image: linear-gradient(to bottom, #f0ac06 0%, #ffe568 110%);
+    border: 1px solid #ffe568;
     border-radius: 8px;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05) inset;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05) inset;
     min-height: 20px;
 }
 
 .help-block {
-    color: #dcdcdc;
+   
     display: block;
     margin-bottom: 10px;
     margin-top: 5px;
 }
 .why-choose360notion-bg
 { width:100%;
-	 background-color:#e3e3e1;
-	 background-image:url(../img/masthead/pattern_whychoose.png);
-	 background-position:bottom;
+	 background-color:#fbfbfb;
+	 background-image:url(../img/masthead/pattern-heading.png);
+	 background-position:top;
 	 background-repeat:repeat-x;
 }
+.backgound-color{ width:100%;
+	 background-color:#fbfbfb;}
 .latest-news-bg
 {
 	width:100%;
@@ -2168,11 +2206,11 @@ fieldset[disabled] .footer .btn-transparent.active {
 	 background-repeat:repeat-x;
 }
 a {
-    color: #623550;
+    color: #4b473a;
     text-decoration: none;
 }
 
-a:hover, a:focus { color: #623550;;
+a:hover, a:focus { color: #4b473a;;
     text-decoration: underline;
 }
 .recent-news-item-excerpt
@@ -2186,10 +2224,10 @@ a:hover, a:focus { color: #623550;;
 .zindex1{ position: relative;
   z-index: 1; }
 .About-Us
-  { font-size:14px; font-weight:400;}
-  .about-us-icon{font-size:20px; color:#fffffe;}
-  .why-choose-us {font-size:24px;}
+  { font-size:15px; font-weight:400;}
+  .about-us-icon{font-size:20px; color:#bab4a2; }
   
+  .title-size{font-size:28px;}
   .btn-primary {
     background-image: linear-gradient(to bottom, #666634 0%, #666634 100%);
     background-repeat: repeat-x;
@@ -2213,3 +2251,15 @@ a:hover, a:focus { color: #623550;;
 .col-md-6 {
     width: 75%;
 }
+.text-footer
+{color:#4b473a;}
+.form-control-bg{ background-color:#fffae5;}
+.pattern-section
+{ width:100%;
+ height:auto;
+background-image:url(../img/masthead/pattern-heading.png); background-repeat:repeat-x;
+background-position:top;
+background-color:#fbfbfb;}
+.content-title-main {font-size:24px;}
+.bg-corlor { width:100%; background-color:#fbfbfb;}
+.padding-left { padding-left:30px;}
