Update My Activity + Compose Message page+Inbox

--- a/public/themes/admin/css/FB-style.css
+++ b/public/themes/admin/css/FB-style.css
@@ -8,12 +8,7 @@
 	padding-left:15px;
 	background-color:#f5f5f5;
 }
-#add_possible_answer
-{
-	line-height:30px;
-	padding-left:15px;
 
-}
 #announcement
 {
 	padding-left:15px;
@@ -23,6 +18,9 @@
 	margin:auto;
 	padding-top:5px;
 }
+.add-possible-answer{line-height:30px;
+	padding-left:15px;
+	border-bottom: 1px dotted #DDD;}
 .announcement_list
 {
     border: 1px solid #DDD;
