--- a/public/templates/ComposeMessage.html
+++ b/public/templates/ComposeMessage.html
@@ -101,7 +101,7 @@
   <div class="row">
     <div class="col-md-3 col-sm-5">
       <div class="profile-avatar"> <img src="../themes/landing/img/avatars/avatar-1-md.jpg" class="profile-avatar-img thumbnail" alt="Profile Picture"> </div>
-      <div class="list-group"> <a href="/dashboard" class="list-group-item {@eq key="/dashboard" value="{url}"}current{/eq}"> <i class="fa fa-asterisk text-sidebar"></i> &nbsp;&nbsp;Activity Stream <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="/dashboard" class="list-group-item {@eq key="/dashboard" value="{url}"}current{/eq}"> <i class="fa fa-home text-sidebar"></i> &nbsp;&nbsp;My Activity Stream <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="/dashboard/messages" class="list-group-item {@eq key="/dashboard/messages" value="{url}"}current{/eq}"> <i class="fa fa-envelope text-sidebar"></i> &nbsp;&nbsp;Messages <i class="fa fa-chevron-right list-group-chevron"></i> <span class="badge">3</span> </a> <a href="/dashboard/files" class="list-group-item {@eq key="/dashboard/files" value="{url}"}current{/eq}"> <i class="fa fa-paperclip text-sidebar"></i> &nbsp;&nbsp;Files <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="/dashboard/friends" class="list-group-item {@eq key="/dashboard/friends" value="{url}"}current{/eq}"> <i class="fa fa-group text-sidebar"></i> &nbsp;&nbsp;Friends <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="/dashboard/profile" class="list-group-item {@eq key="/dashboard/profile" value="{url}"}current{/eq}"> <i class="fa fa-user text-sidebar"></i> &nbsp;&nbsp;My Profile <i class="fa fa-chevron-right list-group-chevron"></i> </a> </div>
+      <div class="list-group"> <a href="/dashboard" class="list-group-item {@eq key="/dashboard" value="{url}"}current{/eq}"> <i class="fa fa-asterisk text-sidebar"></i> &nbsp;&nbsp;Activity Stream <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="/dashboard" class="list-group-item {@eq key="/dashboard" value="{url}"}current{/eq}"> <i class="fa fa-home text-sidebar"></i> &nbsp;&nbsp;My Activity Stream <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="/dashboard/messages" class="list-group-item {@eq key="/dashboard/messages" value="{url}"}current{/eq}"> <i class="fa fa-envelope text-sidebar"></i> &nbsp;&nbsp;Messages <i class="fa fa-chevron-right list-group-chevron"></i> <span class="badge">3</span> </a> <a href="/dashboard/files" class="list-group-item {@eq key="/dashboard/files" value="{url}"}current{/eq}"> <i class="fa fa-paperclip text-sidebar"></i> &nbsp;&nbsp;Files <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="/dashboard/friends" class="list-group-item {@eq key="/dashboard/friends" value="{url}"}current{/eq}"> <i class="fa fa-group text-sidebar"></i> &nbsp;Friends <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="/dashboard/profile" class="list-group-item {@eq key="/dashboard/profile" value="{url}"}current{/eq}"> <i class="fa fa-user text-sidebar"></i> &nbsp;&nbsp;My Profile <i class="fa fa-chevron-right list-group-chevron"></i> </a> </div>
     </div>
     
     <!--inbox-->
@@ -114,109 +114,60 @@
             <li> <a data-toggle="tab" href="#sent">Sent</a> </li>
           </ul>
         </Div>
-        <div id="myTab2Content" class="tab-content">
-          <div id="inbox" class="tab-pane fade in active padding-box-center ">
-            <div>
-              <div class="row title-inbox text-center"> Unread Messages</div>
-              <div class="row padding-box">
-                <div class="col-md-8 ">
-                  <div class="row">
-                    <div class="col-xs-6 col-lg-4 coworker-image "><img src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/> </div>
-                    <div class="col-xs-12 col-sm-6 col-lg-8"> <a class="coworker-name">Lizzel </a>
-                      <p class="inbox-subject">This is a subject line</p>
-                    </div>
-                  </div>
+        <div id="myTab2Content" class="tab-content"> </div>
+        
+        <!--sent-->
+        
+        <div id="sent" class="tab-pane fade active padding-box-center layout-main"> </div>
+        <!-- compose message-->
+        <div>
+          <form id="" action="" method="POST" role="form">
+            <fieldset>
+              <div class="title-inbox text-center">
+                <h4 class="" id="modal_label">Send a Message</h4>
+              </div>
+              <div class="send-message-padding ">
+                <div class="form-group">
+                  <input id="email"
+                                    name="email"
+                                    type="text"
+                                    class="form-control validate[required,custom[email]]"
+                                    placeholder="To: user@companyemail.com"/>
                 </div>
-                <div class="col-md-4 time ">
-                  <p> <a><i class="fa fa-lock text-sidebar"></i>&nbsp;
-                    Unlock to view </a></p>
-                  <p> <i class="fa fa-clock-o"></i> &nbsp;2pm 15/9/2012 </p>
+                <div class="form-group">
+                  <input id="subject"
+                                    name="subject"
+                                    type="text"
+                                    class="form-control validate[required,custom[email]]"
+                                    placeholder="Subject:"/>
+                </div>
+                <div class="form-group">
+                  <label form="message">Message</label>
+                  <textarea class="form-control share-widget-textarea" rows="3" placeholder="Compose a mistake-proof message. Click on the button below to turn it into a snap message." tabindex="1"></textarea>
+                  <div class="row send-message-padding padding-top "> <a> <i class="fa fa-paperclip text-center"></i> &nbsp; Add Files</a></div>
                 </div>
               </div>
-              <div class="row padding-box">
-                <div class="col-md-8 ">
-                  <div class="row">
-                    <div class="col-xs-6 col-lg-4 coworker-image "><img src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/> </div>
-                    <div class="col-xs-12 col-sm-6 col-lg-8"> <a class="coworker-name">Lizzel </a>
-                      <p class="inbox-subject">This is a subject line</p>
-                    </div>
-                  </div>
+              <div class=" row send-message-padding  ">
+                <div class="col-md-8 checkbox inline-block text-left">
+                  <li class="inline-block ui-tooltip">
+                    <label>
+                      <input  type="radio" value=""  >
+                      <a class="ui-tooltip" data-toggle="tooltip"data-original-title="Snap messages will delete 30 seconds after the recipients open them" >Snap Message </a> </label>
+                  </li>
+                  <li class="inline-block">
+                    <label>
+                      <input type="radio" value="">
+                      <a class="ui-tooltip zindex10" data-toggle="tooltip"data-original-title="Edit or delete the mistakes before the recipients opens them">Standard Message</a> </label>
+                  </li>
                 </div>
-                <div class="col-md-4 time ">
-                  <p> <a><i class="fa fa-eye"></i> &nbsp;View</a></p>
-                  <p> <i class="fa fa-clock-o"></i> &nbsp;2pm 15/9/2012 </p>
-                </div>
-              </div>
-              <div class="padding-box-center title-inbox text-center"> History</div>
-              <div class="row padding-box">
-                <div class="col-md-8 ">
-                  <div class="row">
-                    <div class="col-xs-6 col-lg-4 coworker-image "><img src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/> </div>
-                    <div class="col-xs-12 col-sm-6 col-lg-8"> <a class="coworker-name">Lizzel </a>
-                      <p class="inbox-subject">This is a subject line</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-4 time ">
-                  <p> <a><i class="fa fa-eye"></i> &nbsp;View &nbsp; <i class=" fa fa-trash-o"></i> &nbsp;Delete</a></p>
-                  <p> <i class="fa fa-clock-o"></i> &nbsp;2pm 15/9/2012 </p>
+                <div class="col-md-4 inline-block">
+                  <button type="button" class="btn btn-primary  btn-default" data-dismiss="modal">Cancel</button>
+                  &nbsp;
+                  <button type="submit" class="btn btn-primary  btn-default">Send</button>
                 </div>
               </div>
-              <div class="row padding-box">
-                <div class="col-md-8 ">
-                  <div class="row">
-                    <div class="col-xs-6 col-lg-4 coworker-image "><img src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/> </div>
-                    <div class="col-xs-12 col-sm-6 col-lg-8"> <a class="coworker-name">Lizzel </a>
-                      <p class="inbox-subject">This is a subject line</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-4 time ">
-                  <p> <a><i class="fa fa-eye"></i> &nbsp;View &nbsp; <i class=" fa fa-trash-o"></i> &nbsp;Delete</a></p>
-                  <p> <i class="fa fa-clock-o"></i> &nbsp;2pm 15/9/2012 </p>
-                </div>
-              </div>
-            </div>
-          </div>
-          
-          <!--sent-->
-          
-          <div id="sent" class="tab-pane fade active padding-box-center layout-main">
-            <div class="row padding-box ">
-              <div class="col-md-6 ">
-                <div class="row">
-                  <div class="col-xs-6 col-lg-4 coworker-image "><img src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/> </div>
-                  <div class="col-xs-12 col-sm-6 col-lg-8"> <a class="coworker-name">Lizzel </a>
-                    <p class="inbox-subject">This is a subject line</p>
-                  </div>
-                </div>
-              </div>
-              <div class=" col-md-3"> <a>
-                <li class="fa fa-paperclip">&nbsp;&nbsp;Unread</li>
-                </a></div>
-              <div class="col-md-3 time">
-                <p><i class="fa fa-pencil"></i> &nbsp; Edit&nbsp; <i class=" fa fa-trash-o"></i> &nbsp;Delete</a> </p>
-                <p><i class="fa fa-clock-o"></i> &nbsp;2pm 15/9/2012</p>
-              </div>
-            </div>
-            <div class="row padding-box ">
-              <div class="col-md-6 ">
-                <div class="row">
-                  <div class="col-xs-6 col-lg-4 coworker-image "><img src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/> </div>
-                  <div class="col-xs-12 col-sm-6 col-lg-8"> <a class="coworker-name">Lizzel </a>
-                    <p class="inbox-subject">This is a subject line</p>
-                  </div>
-                </div>
-              </div>
-              <div class=" col-md-3"> <a>Opened
-                </li>
-                </a></div>
-              <div class="col-md-3 time"></a>
-                </p>
-                <p><i class="fa fa-clock-o"></i> &nbsp;2pm 15/9/2012</p>
-              </div>
-            </div>
-          </div>
+            </fieldset>
+          </form>
         </div>
       </div>
     </div>
@@ -224,11 +175,13 @@
     <div class="col-md-3 layout-main ">
       <p class="title-sidebar "> Chat With Coworkers </p>
       <p>
-      <div class="row chat-sidebar">
-        <form class="mainnav-form pull-right" role="search">
-          <input class="form-control input-md mainnav-search-query" type="text" placeholder="Search for coworker">
-          <button class="btn btn-sm mainnav-form-btn"> <i class="fa fa-search"></i> </button>
-        </form>
+      <div class="row chat-sidebar text-center">
+        <div class="text-center">
+          <form class="mainnav-form pull-right" role="search">
+            <input class="form-control input-md mainnav-search-query" type="text" placeholder="Search for coworker">
+            <button class="btn btn-sm mainnav-form-btn"> <i class="fa fa-search"></i> </button>
+          </form>
+        </div>
       </div>
       <div class="row padding-chat">
         <div class="col-xs-6 col-lg-4 coworker-image text-center "><img src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/></div>
