--- a/public/themes/admin/css/mvpready-admin.css
+++ b/public/themes/admin/css/mvpready-admin.css
@@ -1957,7 +1957,6 @@ table.table thead .sorting_desc_disabled,
   margin: 0;
   height: 60px;
   color: #fff;
-  color: #6f91ae;
   font-size: 17px;
   text-align: center;
   line-height: 60px;
@@ -1973,12 +1972,12 @@ table.table thead .sorting_desc_disabled,
   background-color: transparent;
 }
 .navbar-inverse .navbar-toggle:hover {
-  color: #547795;
-  background-color: #3b5368;
+  color:#FFF;
+  background-color: #696453;
 }
 .navbar-inverse .navbar-toggle.is-open {
   color: #fff;
-  background-color: #3b5368;
+  background-color: #696453;
 }
 .navbar-inverse .navbar-nav > li > a {
   color: #fff;
@@ -2283,8 +2282,8 @@ table.table thead .sorting_desc_disabled,
     float: none !important;
     padding-top: 15px;
     padding-bottom: 15px;
-    border-top: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
+    border-top: 0px solid #ddd;
+    border-bottom: 0px solid #ddd;
   }
 }
 /* !Content */
@@ -2857,7 +2856,7 @@ a {
 }
 
 a:hover, a:focus { color: #666634;
-    text-decoration: underline;
+    text-decoration:none;
 }
 
   
@@ -2896,27 +2895,41 @@ a:hover, a:focus { color: #666634;
 .fa-rotate-left:before,.fa-undo:before{ font-size:18px; content:"36\f0e2"}
 .message-tab{ border-bottom: 1px solid #ddd;}
 
-.title-sidebar{
-  padding-bottom:20px;
-  font-size: 16px;
+.title-sidebar
+ {
+  padding-bottom:10px;
+  font-size: 20px;
   font-weight: 600;
   text-align:center;
-  color:#4b473a; border-bottom: 1px solid #ddd;}
-  .chat-sidebar{ padding:10px;}
-  .chat-sidebar-padding{ padding-left:10px; text-align:left; }
-  .coworker-image img{border: 1px solid #ddd;
+  color:#4b473a; border-bottom: 1px solid #ddd;
+  }
+.chat-sidebar{ padding:10px;}
+.chat-sidebar-padding{ padding-left:10px; text-align:left; }
+.coworker-image img
+   {
+	border: 1px solid #ddd;
     border-radius: 50px;
     height: 50px;
     padding: 1px;
     width: 50px;
 	}
-	.coworker-image{ width:30%;}
-	.coworker-width{ width:70%; text-align:left; padding-left:20px;}
-	.coworker-name{ font-weight:bold;}
-	.coworker-title{text-align:left;font-style:italic; font-size:12px;}
-	.title-inbox {font-size:20px; font-weight:400;  padding-bottom:15px;}
-	.message-inbox-box { background-color:#f2f2f2; padding:15px;}
-	.padding-box {padding-bottom:10px; padding-top:10px;border-bottom: 1px dotted #ccc;}
-	.padding-box-center { padding:15px;}
-	.time{color: #999;
+.coworker-image{ width:60px;}
+.coworker-width{ width:70%; text-align:left; padding-left:20px;}
+.coworker-name{font-weight:bold;}
+.coworker-title{text-align:left;font-style:italic; font-size:12px;}
+.title-inbox {font-size:20px; font-weight:400;  padding-bottom:15px;}
+.message-inbox-box { background-color:#f2f2f2; padding:15px;}
+.padding-box {padding-bottom:10px; padding-top:10px;border-bottom: 1px dotted #ccc;}
+.padding-chat {padding-bottom:5px; padding-top:5px;}
+.padding-box-center { padding:15px;}
+.time{color: #999;
     font-size: 12px;}
+.radio, .checkbox
+ {
+	 display:inline-block;
+     padding-left: 20px;
+ }
+.inbox-subject { font-size:12px; font-weight:bold; color:#666;}
+.send-message-padding { padding-left:15px; padding-right:15px; }
+.padding-top{ padding-top:15px;}
+.form-control { min-width:250px;}
